--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
 		<meta charset="UTF-8">
 		<title>Shopper Mate: a simple list for your shopping needs</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="shoppermate.js"></script>
 	</head>
 	<body>
-		<div class="icon">
+		<div class="banner">
+			<div class="icon">
+			</div>
+			<h1>Shopper Mate</h1>
 		</div>
-		<h1>Shopper Mate</h1>
 		<form>
 			<input type="text" id="input1" class="listinput" placeholder="Press Enter to Add">
 		</form>
 		<div class="list">
-
+			<div class="checked listitem">alalaa
+				<div class='btn-remove fa fa-times'></div>
+			</div>
+			<div class="listitem">alalaa<div class='btn-remove fa fa-times'></div></div>
+			<div class="listitem">alalaa<div class='btn-remove fa fa-times'></div></div>
 		</div>
 	</body>
 </html>
