added remove/checking functionality

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 			<div class="checked listitem">alalaa
 				<div class='btn-remove fa fa-times'></div>
 			</div>
-			<div class="listitem">alalaa<div class='btn-remove fa fa-times'></div></div>
+			<div class="listitem">
+				<div class='btn-check'></div>
+				alalaa
+				<div class='btn-remove fa fa-times'></div>
+			</div>
 			<div class="listitem">alalaa<div class='btn-remove fa fa-times'></div></div>
 		</div>
 	</body>
