--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 			<input type="text" id="input1" class="listinput" placeholder="Press Enter to Add">
 		</form>
 		<div class="list">
-			<div class="checked listitem">alalaa
+			<div class="checked listitem">
+				<div class='btn-check'></div>
+				alalaa
 				<div class='btn-remove fa fa-times'></div>
 			</div>
 			<div class="listitem">
@@ -26,7 +28,11 @@
 				alalaa
 				<div class='btn-remove fa fa-times'></div>
 			</div>
-			<div class="listitem">alalaa<div class='btn-remove fa fa-times'></div></div>
+			<div class="listitem">
+				<div class='btn-check'></div>
+				alalaa
+				<div class='btn-remove fa fa-times'></div>
+			</div>
 		</div>
 	</body>
 </html>
