animated list and added full list clear

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Shopper Mate: a simple list for your shopping needs</title>
+		<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300,100,400' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -12,12 +13,12 @@
 		<div class="banner">
 			<div class="icon">
 			</div>
-			<h1>Shopper Mate</h1>
+			<h1>SHOPPER MATE</h1>
 		</div>
 		<form>
-			<input type="text" id="input1" class="listinput" placeholder="Press Enter to Add">
+			<input type="text" id="input1" class="listinput" placeholder="Enter item here">
 		</form>
-		<div class="list">
-		</div>
+		<div class="clear">CLEAR LIST</div>
+		<div class="list"></div>
 	</body>
 </html>
